# synthFocus

./: .gitignore  README.md  context.txt  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: keep-alive.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: analyst.py  devil_advocate.py  graph.py  llm.py  moderator.py  persona.py  prompts.py
backend/app/api/: auth.py  routes.py  websocket.py
backend/app/models/: schemas.py  state.py
backend/app/services/: cache.py  database.py  message_store.py  pdf_generator.py  session.py  streaming.py
backend/app/utils/: personas.py
backend/migrations/: 001_initial_schema.sql
backend/scripts/: seed_users.py
docs/: architecture.md  deployment.md  description.txt  judge-instructions.txt  presentation.md
frontend/: .env.example  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ConceptUpload.tsx  DiscussionPanel.tsx  HomePage.tsx  LoginPage.tsx  MessageBubble.tsx  ParticipantSidebar.tsx  ReportView.tsx  SessionControls.tsx  SessionHistory.tsx  SessionsPage.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: supabase.ts
frontend/src/stores/: authStore.ts  sessionStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
scripts/: build_presentation.py
